--- a/test2 copy.html
+++ b/test2 copy.html
@@ -130,9 +130,8 @@
   },
   {
     name: 'ภาพยนตร์',
-    channels: [94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,109],
+    channels: [94,95,96],
   },
-
 ];
 
 
@@ -222,19 +221,6 @@
       '4K Red One - เรด วัน (พากย์ไทย)',
       '4K Gladiator II - แกลดดิเอเตอร์ นักรบผู้กล้า ผ่าแผ่นดินทรราช 2',
       '4K Kraven the Hunter - เครเว่น เดอะ ฮันเตอร์',
-      '4K Sonic the Hedgehog 3 - โซนิค เดอะ เฮดจ์ฮ็อก 3',
-      '4K Alien: Romulus - เอเลี่ยน: โรมูลัส',
-      '4K Deadpool & Wolverine เดดพูล & วูล์ฟเวอรีน',
-      '4K The Fall Guy - สตันท์แมนคนจริง',
-      '4K Furiosa: A Mad Max Saga - ฟูริโอซ่า มหากาพย์แมดแม็กซ์',
-      '4K Godzilla Minus One (พากย์ไทย)',
-      '4K Blue Beetle',
-      '4K Black Panther: Wakanda Forever',
-      'Judge Bao: Academy Intrigue - เปาบุ้นจิ้นกับโรงเรียนลึกลับ (พากย์ไทย)',
-      '4K Avengers: Infinity War',
-      'Spider-Man: No Way Home',
-      'Postman ไปรษณีย์ 4 โลก',
-      'Logan - โลแกน เดอะ วูล์ฟเวอรีน',
     ];
 
     const channelLogos = [
@@ -327,19 +313,6 @@
       'https://cloud.ufxtv.com/images/vod/thumbs/ozii9hzha6cy1h5l0o2zarov90fopfqkqljm59vmjczqvxy21tz4jjmv83ui0z46.jpg',
       'https://cloud.ufxtv.com/images/vod/thumbs/lxqes0s091zqz7zkzg8gawocr9hjaxeqtxou8x5tibr091zfmf79ihy6mvot5mj3.jpg',
       'https://cloud.ufxtv.com/images/vod/thumbs/f4abk16eos1yt01qzdbyfk1098j1nx0r98fe0gj9h5anjrfltebtuvgu2e87qjw2.jpg',
-      'https://cloud.ufxtv.com/images/vod/thumbs/6x1d7z9daf0sdl875xeg158n2ck6eej2ajhpnlldmndkqi5c405kwzpqvknyy8tg.jpg',
-      'https://cloud.ufxtv.com/images/vod/thumbs/ymq70ctbe6hgsf7baq9e402z34o8gwoy84jgbo3afbva9f0as6lfxa5ax6gpk1mq.jpg',
-      'https://cloud.ufxtv.com/images/vod/thumbs/0myldcwwzhcyf86e7a4dt5ygft8e7hldge2kub8xjwkxwdngncb8ma0h45z41u5g.jpg',
-      'https://cloud.ufxtv.com/images/vod/thumbs/b5f48kk6t3qww3u286okv9lgapdmkdx9w5lpmnwnmbody52n2qpztpqao207z25o.jpg',
-      'https://cloud.ufxtv.com/images/vod/thumbs/5fvujh43939p4l79zhxy3fczm52zc82wxkj442h5jv1lp6pvdscyd5c2fltay2p2.jpg',
-      'https://cloud.ufxtv.com/images/vod/thumbs/u707rqwjmlknx8vsx5bpg1ytmzjl58guzv747125mke5wrh390gj91c39qsgvr07.jpg',
-      'https://cloud.ufxtv.com/images/vod/thumbs/ns6c37fwvx3482330h48tt344o2rxmw57r91quoeo5402e2dbqgytdsyaqfyzqe0.jpg',
-      'https://cloud.ufxtv.com/images/vod/thumbs/leesfexbgcl201hutmw2chec11c672kwhjkdbprnjse9q4ucl8l007ocek6c11cr.jpg',
-      'https://cloud.ufxtv.com/images/vod/thumbs/spioen3nfvzwf4a8aexdxill48cnu8f6r3jzy5gh2nd0ul8edkyj7vu5xkf8weax.jpg',
-      'https://cloud.ufxtv.com/images/vod/thumbs/0syh0lilhtp4fg6y0nouetyijcl3iuojmn0n8i9qcyurf0qfofa288lsl7v41kno.jpg?r=34',
-      'https://cloud.ufxtv.com/images/vod/thumbs/mhrso1ghcmdggnv0m1gvuwqrimi2mkb8230q5g7h2lyj9ukwv0rqwihf50hrlt0n.jpg',
-      'https://cloud.ufxtv.com/images/vod/thumbs/yxncxoxpj3agjs5x65vk127t00zui8rr94rb9m5c8v0mz7okmt4s7bh53ha676yt.jpg',
-      'https://cloud.ufxtv.com/images/vod/thumbs/ngu9kivd8sonyik71w7vfo388cxxh2j4jde3v9h425r0oc8q8flo4pwd1uajxtog.jpg',
     ];
 
     // กำหนด playBaseUrls เอง
@@ -441,19 +414,6 @@
       'https://cloud.ufxtv.com/api/vod/play2/?vod_type=movie&vod_content_id=ozii9hzha6cy1h5l0o2zarov90fopfqkqljm59vmjczqvxy21tz4jjmv83ui0z46&res=720&vod_sound=auto&kauth=',
       'https://cloud.ufxtv.com/api/vod/play2/?vod_type=movie&vod_content_id=lxqes0s091zqz7zkzg8gawocr9hjaxeqtxou8x5tibr091zfmf79ihy6mvot5mj3&res=720&vod_sound=auto&kauth=',
       'https://cloud.ufxtv.com/api/vod/play2/?vod_type=movie&vod_content_id=f4abk16eos1yt01qzdbyfk1098j1nx0r98fe0gj9h5anjrfltebtuvgu2e87qjw2&res=720&vod_sound=auto&kauth=',
-      'https://cloud.ufxtv.com/api/vod/play2/?vod_type=movie&vod_content_id=6x1d7z9daf0sdl875xeg158n2ck6eej2ajhpnlldmndkqi5c405kwzpqvknyy8tg&res=720&vod_sound=auto&kauth=',
-      'https://cloud.ufxtv.com/api/vod/play2/?vod_type=movie&vod_content_id=ymq70ctbe6hgsf7baq9e402z34o8gwoy84jgbo3afbva9f0as6lfxa5ax6gpk1mq&res=720&vod_sound=auto&kauth=',
-      'https://cloud.ufxtv.com/api/vod/play2/?vod_type=movie&vod_content_id=0myldcwwzhcyf86e7a4dt5ygft8e7hldge2kub8xjwkxwdngncb8ma0h45z41u5g&res=720&vod_sound=auto&kauth=',
-      'https://cloud.ufxtv.com/api/vod/play2/?vod_type=movie&vod_content_id=b5f48kk6t3qww3u286okv9lgapdmkdx9w5lpmnwnmbody52n2qpztpqao207z25o&res=720&vod_sound=auto&kauth=',
-      'https://cloud.ufxtv.com/api/vod/play2/?vod_type=movie&vod_content_id=5fvujh43939p4l79zhxy3fczm52zc82wxkj442h5jv1lp6pvdscyd5c2fltay2p2&res=720&vod_sound=auto&kauth=',
-      'https://cloud.ufxtv.com/api/vod/play2/?vod_type=movie&vod_content_id=u707rqwjmlknx8vsx5bpg1ytmzjl58guzv747125mke5wrh390gj91c39qsgvr07&res=720&vod_sound=auto&kauth=',
-      'https://cloud.ufxtv.com/api/vod/play2/?vod_type=movie&vod_content_id=ns6c37fwvx3482330h48tt344o2rxmw57r91quoeo5402e2dbqgytdsyaqfyzqe0&res=720&vod_sound=auto&kauth=',
-      'https://cloud.ufxtv.com/api/vod/play2/?vod_type=movie&vod_content_id=leesfexbgcl201hutmw2chec11c672kwhjkdbprnjse9q4ucl8l007ocek6c11cr&res=720&vod_sound=auto&kauth=',
-      'https://cloud.ufxtv.com/api/vod/play2/?vod_type=movie&vod_content_id=spioen3nfvzwf4a8aexdxill48cnu8f6r3jzy5gh2nd0ul8edkyj7vu5xkf8weax&res=720&vod_sound=auto&kauth=',
-      'https://cloud.ufxtv.com/api/vod/play2/?vod_type=movie&vod_content_id=0syh0lilhtp4fg6y0nouetyijcl3iuojmn0n8i9qcyurf0qfofa288lsl7v41kno&res=720&vod_sound=auto&kauth=',
-      'https://cloud.ufxtv.com/api/vod/play2/?vod_type=movie&vod_content_id=mhrso1ghcmdggnv0m1gvuwqrimi2mkb8230q5g7h2lyj9ukwv0rqwihf50hrlt0n&res=720&vod_sound=auto&kauth=',
-      'https://cloud.ufxtv.com/api/vod/play2/?vod_type=movie&vod_content_id=yxncxoxpj3agjs5x65vk127t00zui8rr94rb9m5c8v0mz7okmt4s7bh53ha676yt&res=720&vod_sound=auto&kauth=',
-      'https://cloud.ufxtv.com/api/vod/play2/?vod_type=movie&vod_content_id=ngu9kivd8sonyik71w7vfo388cxxh2j4jde3v9h425r0oc8q8flo4pwd1uajxtog&res=720&vod_sound=auto&kauth=',
     ];
 
     // ฟังก์ชันดึง playlist URL
@@ -514,18 +474,6 @@ async function login() {
 
 function showChannelsInCategory(catIndex) {
   const category = categories[catIndex];
-
-  // ถ้าเป็นหมวด "20+" ให้ขอ PIN ก่อนเข้า
-  if (category.name === '20+') {
-    const pin = prompt("🔐 กรุณาใส่ PIN เพื่อเข้าหมวด 20+:");
-
-    if (pin !== '44444') {
-      alert("❌ PIN ไม่ถูกต้อง");
-      return; // ไม่อนุญาตให้เข้า
-    }
-  }
-
-  // แสดงช่องของหมวดที่เลือก
   channelsDiv.innerHTML = '';
   channelsDiv.style.display = 'flex';
   document.getElementById('categories').style.display = 'none';
@@ -543,7 +491,6 @@ function showChannelsInCategory(catIndex) {
   };
   channelsDiv.appendChild(backBtn);
 }
-
 
 
 
@@ -628,7 +575,7 @@ let session = null;
   const xml = await getPlaylist(session, playBaseUrls[index]);
   console.log("🚀 ~ loadChannelByIndex ~ xml:", xml)
 
-  const isMovieCategory = categories.find(cat => cat.name === 'ภาพยนตร์'||cat.name === '20+')?.channels.includes(index);
+  const isMovieCategory = categories.find(cat => cat.name === 'ภาพยนตร์')?.channels.includes(index);
 
   if (isMovieCategory) {
     // ดึงและ decode url ที่อยู่ใน <url> แทน
