--- a/test2.html
+++ b/test2.html
@@ -132,6 +132,10 @@
     name: 'ภาพยนตร์',
     channels: [94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,109],
   },
+  {
+    name: '3BB TV',
+    channels: [94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,109],
+  },
 
 ];
 
@@ -515,14 +519,9 @@ async function login() {
 function showChannelsInCategory(catIndex) {
   const category = categories[catIndex];
 
-  // ถ้าเป็นหมวด "20+" ให้ขอ PIN ก่อนเข้า
-  if (category.name === '20+') {
-    const pin = prompt("🔐 กรุณาใส่ PIN เพื่อเข้าหมวด 20+:");
-
-    if (pin !== '44444') {
-      alert("❌ PIN ไม่ถูกต้อง");
-      return; // ไม่อนุญาตให้เข้า
-    }
+  if (category.name === '3BB TV') {
+    window.open('https://xtream-fast.serv00.net/3bb.php?token=12c9f2345629682526c389205bff5a3e', '_self');
+    return;
   }
 
   // แสดงช่องของหมวดที่เลือก
