--- a/thaiseries.html
+++ b/thaiseries.html
@@ -23,8 +23,9 @@
 ########################################
 
 
-#EXTINF:-1 group-title="ช่องกีฬาทั่วไป" tvg-logo="https://rentapi.blackboxsys.net/images/png/epl-1.png",EPL 01
-#EXTVLCOPT:http-referer=https://fw4free.com/
+#EXTINF:67 group-title="ช่องกีฬาทั่วไป" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-1.png",EPL 01
+#EXTVLCOPT:network-caching=1000
+#EXTVLCOPT:http-referrer=https://fw4free.com/
 https://fw4free.inwstream.com/fw4free/ch1.stream/playlist.m3u8
 
 	
