--- a/digitaltv.html
+++ b/digitaltv.html
@@ -26,6 +26,11 @@
 #EXTINF:-1 group-title="ช่องทีวีดิจิตอลไทย" tvg-logo="https://raw.githubusercontent.com/KOGOCUNG/plugin/refs/heads/main/NBT2HD_2025.png",NBT HD
 https://cdn-edge-ott.prd.go.th/live_vlc/smil:c30f-97f7-c767-ca64-98aa.smil/playlist.m3u8
 
+#EXTINF:-1 group-title="ช่องทีวีดิจิตอลไทย" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-1.png",EPL01
+#EXTVLCOPT:network-caching=1000
+#EXTVLCOPT:http-referrer=https://fw4free.com/
+https://fw4free.inwstream.com/fw4free/ch1.stream/playlist.m3u8
+	
 #EXTINF:-1 group-title="ช่องทีวีดิจิตอลไทย" tvg-logo="https://58-64-52-73-rewriter.ais-vidnt.com/ais/play/origin/LIVE/channelicon/0014.png",THAI PBS HD
 https://thaipbs-live.cdn.byteark.com/live/playlist.m3u8
 
