--- a/digitaltv.html
+++ b/digitaltv.html
@@ -48,6 +48,21 @@ https://fw4free.inwstream.com/fw4free/ch4.stream/playlist.m3u8
 #EXTVLCOPT:http-referrer=https://fw4free.com/
 https://fw4free.inwstream.com/fw4free/ch5.stream/playlist.m3u8
 
+#EXTINF:-1 group-title="กีฬา" tvg-logo="https://fw4free.com/channel/ch6.png",BEIN 1
+#EXTVLCOPT:network-caching=1000
+#EXTVLCOPT:http-referrer=https://fw4free.com/
+https://fw4free.inwstream.com/fw4free/ch6.stream/playlist.m3u8
+
+#EXTINF:-1 group-title="กีฬา" tvg-logo="https://fw4free.com/channel/ch7.png",BEIN 2
+#EXTVLCOPT:network-caching=1000
+#EXTVLCOPT:http-referrer=https://fw4free.com/
+https://fw4free.inwstream.com/fw4free/ch7.stream/playlist.m3u8
+
+#EXTINF:-1 group-title="กีฬา" tvg-logo="https://fw4free.com/channel/ch8.png",BEIN 3
+#EXTVLCOPT:network-caching=1000
+#EXTVLCOPT:http-referrer=https://fw4free.com/
+https://fw4free.inwstream.com/fw4free/ch8.stream/playlist.m3u8
+
 }</style>
 
 <body bgcolor="FFFFFF">
