--- a/test2.html
+++ b/test2.html
@@ -533,7 +533,7 @@ function showChannelsInCategory(catIndex) {
     return;
   }
   if (category.name === 'ดูหนังออนไลน์') {
-    window.open('http://guflix.streaming-fast.com/movies_page_sv1_web/movie-thai/1/12c9f2345629682526c389205bff5a3e.php', '_self');
+    window.open('guflix.streaming-fast.com/vip_wiseplay/WEB/movies/sv1_indexmovies_cat.php?token=e04baa85f809e89d2158f28b39396e7c', '_self');
     return;
   }
   if (category.name === 'ดูอนิเมะ') {
