--- a/test2.html
+++ b/test2.html
@@ -87,10 +87,9 @@
 <body>
 
     <video id="video" controls autoplay></video>
-<!-- <iframe width="100%" height="900px" src="https://fw4free.com/player2.php?channel=1655580&id=53" allowfullscreen></iframe> -->
-<div class="container"> 
-  <iframe class="responsive-iframe" src="https://fw4free.com/player2.php?channel=1655580&id=53"></iframe>
-</div>
+   <div class="container" id="iframe-container" style="display: none;">
+    <iframe class="responsive-iframe" id="channel-frame" src=""></iframe>
+  </div>
     
     <div id="categories" class="channels"></div>
   <div class="channels" id="channels"></div>
@@ -260,7 +259,7 @@
       'Spider-Man: No Way Home',
       'Postman ไปรษณีย์ 4 โลก',
       'Logan - โลแกน เดอะ วูล์ฟเวอรีน',
-      'ทดสอบ'
+      'ผู้เช่า'
     ];
 
     const channelLogos = [
@@ -366,7 +365,7 @@
       'https://cloud.ufxtv.com/images/vod/thumbs/mhrso1ghcmdggnv0m1gvuwqrimi2mkb8230q5g7h2lyj9ukwv0rqwihf50hrlt0n.jpg',
       'https://cloud.ufxtv.com/images/vod/thumbs/yxncxoxpj3agjs5x65vk127t00zui8rr94rb9m5c8v0mz7okmt4s7bh53ha676yt.jpg',
       'https://cloud.ufxtv.com/images/vod/thumbs/ngu9kivd8sonyik71w7vfo388cxxh2j4jde3v9h425r0oc8q8flo4pwd1uajxtog.jpg',
-      'https://cloud.ufxtv.com/images/vod/thumbs/ngu9kivd8sonyik71w7vfo388cxxh2j4jde3v9h425r0oc8q8flo4pwd1uajxtog.jpg',
+      'https://img.inwiptv.net/postor/20250227112222wBrbYlOVXRfeefvfgeJI5btS1Ow.jpg',
     ];
 
     // กำหนด playBaseUrls เอง
@@ -505,50 +504,7 @@
   return (hasClearUrl || hasMovieUrl) ? text : null;
 }
 
-    async function getPlaylistMovieOnline(playBaseUrl) {
-const myHeaders = new Headers();
-myHeaders.append("accept", "text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.7");
-myHeaders.append("accept-language", "th,en;q=0.9,th-TH;q=0.8");
-myHeaders.append("priority", "u=0, i");
-myHeaders.append("referer", "https://guflix.streaming-fast.com/");
-myHeaders.append("sec-ch-ua", "\"Google Chrome\";v=\"135\", \"Not-A.Brand\";v=\"8\", \"Chromium\";v=\"135\"");
-myHeaders.append("sec-ch-ua-mobile", "?0");
-myHeaders.append("sec-ch-ua-platform", "\"Windows\"");
-myHeaders.append("sec-fetch-dest", "iframe");
-myHeaders.append("sec-fetch-mode", "navigate");
-myHeaders.append("sec-fetch-site", "cross-site");
-myHeaders.append("sec-fetch-storage-access", "active");
-myHeaders.append("upgrade-insecure-requests", "1");
-myHeaders.append("user-agent", "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/135.0.0.0 Safari/537.36");
-myHeaders.append("Cookie", "PHPSESSID=4dpo87disd0i4egrpd141etp5j");
-
-  const requestOptions = {
-    method: "GET",
-    headers: myHeaders,
-    redirect: "follow"
-  };
-
-  try {
-    const response = await fetch(playBaseUrl, requestOptions);
-    const html = await response.text();
-
-    // ดึงค่าไฟล์ .m3u8 จากสคริปต์ jwplayer
-    const match = html.match(/file:\s*'(https?:\/\/[^']+\.m3u8[^']*)'/);
-
-    if (match && match[1]) {
-      const m3u8Url = match[1];
-      console.log('✅ Extracted M3U8 URL:', m3u8Url);
-      return m3u8Url;
-    } else {
-      console.warn('⚠️ ไม่พบ URL .m3u8 ใน HTML');
-      return null;
-    }
-  } catch (error) {
-    console.error('❌ Error fetching playlist HTML:', error);
-    return null;
-  }
-}
-
+    
 
 
 
@@ -640,23 +596,33 @@ function showChannelsInCategory(catIndex) {
 }
 
     // ฟังก์ชันในการโหลดช่องที่เลือก
-    function loadChannel(url) {
-  const isMobile = /Mobi|Android/i.test(navigator.userAgent);
+function loadChannel(url, useIframe = false) {
+  const video = document.getElementById('video');
+  const iframe = document.getElementById('channel-frame');
+  const iframeContainer = document.getElementById('iframe-container');
 
-  if (isMobile) {
-    const hls = new Hls();
-    hls.loadSource(url);
-    hls.attachMedia(video);
-  } else if (Hls.isSupported()) {
-    const hls = new Hls();
-    hls.loadSource(url);
-    hls.attachMedia(video);
-  } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
-    video.src = url;
+  if (useIframe) {
+    // 👉 ซ่อนวิดีโอ แล้วโชว์ iframe
+    video.style.display = 'none';
+    iframeContainer.style.display = 'block';
+    iframe.src = url;
   } else {
-    alert('เบราว์เซอร์ของคุณไม่รองรับ HLS 😥');
+    // 👉 ซ่อน iframe แล้วโชว์ video
+    iframeContainer.style.display = 'none';
+    video.style.display = 'block';
+
+    if (Hls.isSupported()) {
+      const hls = new Hls();
+      hls.loadSource(url);
+      hls.attachMedia(video);
+    } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
+      video.src = url;
+    } else {
+      alert('เบราว์เซอร์ของคุณไม่รองรับ HLS 😥');
+    }
   }
 }
+
 
 
 let session = null;
@@ -695,18 +661,11 @@ let session = null;
     loadChannel(fixedUrl);
     return;
   }
-  if (channelNames[index] === 'ทดสอบ') {
-  getPlaylistMovieOnline('https://fw4free.com/player2.php?channel=1655580&id=53')
-    .then(m3u8Url => {
-      if (m3u8Url) {
-        loadChannel(m3u8Url); // หรือจะ config jwplayer ตรงนี้ก็ได้
-      } else {
-        alert('ไม่สามารถดึงลิงก์หนังได้');
-      }
-    });
-
-  return;
-}
+  if (channelNames[index] === 'ผู้เช่า') {
+    const iframeUrl = 'https://fw4free.com/player2.php?channel=1622792&id=53';
+    loadChannel(iframeUrl, true); // ไม่ต้อง await ถ้า loadChannel ไม่เป็น async ก็ได้
+    return;
+  }
 
 
   const xml = await getPlaylist(session, playBaseUrls[index]);
