--- a/test2.html
+++ b/test2.html
@@ -88,7 +88,7 @@
 
     <video id="video" controls autoplay></video>
    <div class="container" id="iframe-container" style="display: none;">
-    <iframe class="responsive-iframe" id="channel-frame" src=""></iframe>
+    <iframe class="responsive-iframe" id="channel-frame" src="" allowfullscreen></iframe>
   </div>
     
     <div id="categories" class="channels"></div>
